fixed title spacing

--- a/src/modules/AboutBlock.scss
+++ b/src/modules/AboutBlock.scss
@@ -12,7 +12,7 @@
   .about__content {
     h3,
     h4 {
-      margin-bottom: 16px;
+      margin-bottom: 25px;
       position: relative;
       &:after {
         content: "";
