--- a/src/modules/Services.scss
+++ b/src/modules/Services.scss
@@ -3,7 +3,7 @@
   margin-bottom: 30px;
   padding-top: 15px;
   h3 {
-    margin-bottom: 16px;
+    margin-bottom: 25px;
     position: relative;
     &:after {
       content: "";
@@ -39,7 +39,7 @@
   .services__content {
     margin-top: 30px;
     h3 {
-      margin-bottom: 16px;
+      margin-bottom: 25px;
       position: relative;
       &:after {
         content: "";
